<resources>
    <string name="app_name">Water Report</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_id">ID (sample@mail.com)</string>
    <string name="prompt_password_again">Re-enter password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_not_same">Passwords are not the same</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_exists">Username already exists</string>
    <string name="error_not_exists">Username does not exist</string>
    <string name="error_empty_location">Empty location</string>
    <string name="error_invalid_location">Invalid location</string>
    <string name="error_user">Invalid Username</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="submit">Submit Report</string>
    <string name="view_all">View Reports</string>
    <string name="location_label_label">Location:</string>
    <string name="title_activity_registration">Registration</string>
    <string-array name="title_spinner_names">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>NA</item>
    </string-array>
    <string-array name="type_spinner_values">
        <item>Bottled</item>
        <item>Well</item>
        <item>Stream</item>
        <item>Lake</item>
        <item>Spring</item>
        <item>Other</item>
    </string-array>
    <string-array name="condition_spinner_values">
        <item>Waste</item>
        <item>Treatable-Clear</item>
        <item>Treatable-Muddy</item>
        <item>Potable</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="quality_condition">
        <item>Safe</item>
        <item>Treatable</item>
        <item>Unsafe</item>
    </string-array>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_view_all">ViewAllActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="Source">Source:</string>
    <string name="Condition">Condition</string>
    <string name="Login">Login</string>
    <string name="Email">Email:</string>
    <string name="Address">Home Address</string>
    <string name="SubmitProfile">Submit Profile</string>
    <string name="Title">Title</string>
    <string name="Type">Type of User:</string>
    <string name="User">User</string>
    <string name="Worker">Worker</string>
    <string name="Manager">Manager</string>
    <string name="Admin">Admin</string>
    <string name="Register">Register</string>
    <string name="description">Image which displays whenever selecting water report pin</string>
    <string name="main_description">Image which displays on starting screen</string>
    <string name="date">Date: %s</string>
    <string name="getUser">Username: %s</string>
    <string name="ReportID">Report ID: %d</string>
    <string name="none">No Water Reports Created</string>
    <string name="Location">Location:</string>
    <string name="Virus">Virus/Contaminant:</string>
    <string name="Year">Year:</string>
    <string name="Submit">Submit</string>
    <string name="quality">Submit Quality Report</string>
    <string name="contaminant_label">Contaminant PPM:</string>
    <string name="virus_label">Virus PPM:</string>
    <string name="error_virus">Invalid entry for virus PPM</string>
    <string name="error_contaminant">Invalid entry for contaminant PPM</string>
    <string name="Cancel">Cancel</string>
    <string name="QualityReport">Quality Report</string>
    <string name="title_activity_worker_select_report">Choose report type</string>
    <string name="Graph">Quality History Graph</string>
    <string name="graphIt">Graph</string>
    <string name="Virus_text">Virus PPM</string>
    <string name="Contaminant_text">Contaminant PPM</string>
</resources>
