<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikola.waterreport.controllers.ProfileActivity">

    <EditText
        android:labelFor="@id/reg_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="34dp"
        android:id="@+id/reg_Email"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_Home"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reg_Home"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/textView4" />

    <EditText
        android:labelFor="@id/reg_Home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:layout_marginTop="54dp"
        android:id="@+id/reg_Home"
        android:layout_below="@+id/reg_Email"
        android:layout_alignStart="@+id/reg_Email"
        android:layout_marginStart="22dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_Title"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/reg_Home" />

    <Button
        android:text="@string/SubmitProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_Profile_Submit"
        android:layout_below="@+id/reg_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />

</RelativeLayout>
