<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" />

    <EditText
        android:id="@+id/reg_userame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_user"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" />

    <EditText
        android:id="@+id/reg_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_again"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" />

    <TextView
        android:text="Type of User:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_type" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06" />

    <RadioButton
        android:text="User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_user"
        android:checked="true"
        android:focusable="false" />

    <RadioButton
        android:text="Worker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_worker"
        android:focusable="false" />

    <RadioButton
        android:text="Manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_manager"
        android:focusable="false" />

    <RadioButton
        android:text="Admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_admin"
        android:focusable="false" />

    <Button
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_logout" />
</LinearLayout>
