<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_report"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:maxLines="1"
        android:gravity="center"
        android:layout_below="@+id/reg_progress"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/report_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:maxLines="1"
        android:layout_below="@+id/text_time"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:maxLines="1"
        android:gravity="center"
        android:layout_below="@+id/report_number"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:maxLines="1"
        android:text="@string/location_label_label"
        android:gravity="start"
        android:layout_below="@+id/user_name"
        android:layout_toEndOf="@+id/reg_progress" />

    <EditText
        android:hint=""
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_below="@+id/location_label"
        android:layout_toEndOf="@+id/reg_progress" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp"
        android:id="@+id/condition_spinner" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Source"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/condition_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:id="@+id/source_label"
        tools:text="Source:" />

    <TextView
        android:text="@string/Condition"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/condition_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:id="@+id/condition_label"
        tools:text="Condition:" />

</RelativeLayout>
